<resources>

    <string name="app_name">File Explorer</string>
    <string name="menu_settings">Settings</string>
     <string name="tab_favorite">favorite</string>
    <string name="tab_pic">picture</string>
    <string name="category_picture">图片</string>
    <string name="category_video">视频</string>
    <string name="dlan_unconnect">未连接设备</string>
    <string name="change_view">视图选择</string>
    <string name="file_view_type">文件夹视图</string>
    <string name="all_file_view_type">所有文件视图</string>
    <string name="cm_usb_desc">未连接设备</string>
    <string name="recent_play">最近播放</string>
    <string name="recent_content">最新内容</string>
    <string name="genre_view_type">流派视图</string>
    <string name="music_view_type">所有歌曲视图</string>
    <string name="album_view_type">专辑视图</string>
    <string name="artist_view_type">艺术家视图</string>
    <string name="cm_dlan_desc">播放可能会不稳定,具体取决于网络连接状态</string>
    <string name="cm_dlan_title">连接到共享设备</string>
        <!-- 
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_audio">audio</string>
     <string name="tab_video">video</string>
     -->
    <string name="category_all">all</string>
    <string name="category_music">music</string>
   <string name="enable_sd_card">enable_sd_card</string>
   <string name="no_file">no_file</string>
    <string name="cm_device_progress">可用,共</string>
    <string name="cm_file_cnt">项</string>
    <string name="cm_device_unlive_click">请连接设备,然后尝试体验</string>
    <string name="cm_pop_title">连接到</string>
    <string name="cm_unknow">未知</string>
    <string name="cm_genre_unknow">未知</string>
    <string name="recent_date">更新日期</string>
    <string name="dialog_select_type">选择文件类型</string>
    <string name="unknow_name">未知</string>
    <string name="current_sd_remove">相关设备已移出</string>
    <string name="local_sdcard">本机-</string>
    <string name="usb_device">USB存储</string>
    <string name="back_button_desc">键返回</string>
    <string name="choose_desc">键进行功能选择</string>
    <string name="ok_open_desc">键打开</string>
    <string name="current_dlan_remove">共享设备已断开,请重新连接</string>
    <string name="up_file">上级文件夹</string>
    <string name="confirm">确定</string>
    <string name="cancle">取消</string>
    <string name="cm_data_loading">数据正在加载中</string>  
   
</resources>