<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/current_play_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/recent_play" />

    <TextView
        android:id="@+id/current_date_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/recent_date" />

    <GridView
        android:id="@+id/current_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/current_date_tag"
        android:numColumns="6"
        android:stretchMode="columnWidth"
        android:verticalSpacing="10dp" >
    </GridView>

    <TextView
        android:id="@+id/recent_add_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/current_content"
        android:text="@string/recent_content" />

    <TextView
        android:id="@+id/recent_add_date_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/current_content"
        android:text="@string/recent_date" />

    <GridView
        android:id="@+id/recentadd_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/recent_add_tag"
        android:numColumns="6"
        android:stretchMode="columnWidth"
        android:verticalSpacing="10dp" >
    </GridView>

</RelativeLayout>