<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_marginBottom="10dp"
    android:layout_marginRight="10dp" >

    <TextView
        android:id="@+id/ok_back_txt_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="5sp"
        android:text="@string/back_button_desc"
        android:textColor="@color/white"
        android:textSize="17sp" />

    <ImageView
        android:id="@+id/ok_back_img_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5sp"
        android:layout_toLeftOf="@id/ok_back_txt_tag"
        android:src="@drawable/cm_back" />

    <LinearLayout
        android:id="@+id/tail_other_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_toLeftOf="@id/ok_back_img_tag"
        android:orientation="horizontal"
        android:visibility="gone" >

        <ImageView
            android:id="@+id/ok_open_img_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/cm_ok" />

        <TextView
            android:id="@+id/ok_open_txt_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:text="@string/ok_open_desc"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <ImageView
            android:id="@+id/choose_txt_img_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:src="@drawable/cm_menu_choose" />

        <TextView
            android:id="@+id/choose_txt_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:layout_toLeftOf="@id/ok_back_img_tag"
            android:text="@string/choose_desc"
            android:textColor="@color/white"
            android:textSize="17sp" />
    </LinearLayout>

</RelativeLayout>